--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
 
 <body>
   <h1>Your Name</h1>
+  <nav>
+    <ul>
+        <li><a href="protoype/indel.html">prototype HTML assignment</a></li>
+
+
+    </ul>
+
+
+  </nav>
 </body>
 </html>
