--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
 
   <title>IT pearl | Dustin Gann</title>
-  <meta name="description" content="Dustin's assignment collection for IT miner">
-  <meta name="author" content="Dustin Gann">
+  <meta name="description" content="Dustin's assignment collection for IT miner" />
+  <meta name="author" content="Dustin Gann" />
+  <link href="assets/css/style.css" rel="stylesheet" />
 
 </head>
 
