--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <nav>
     <ul>
         <li><a href="protoype/indel.html">prototype HTML assignment</a></li>
+        <li><a href="css-demo/index.html">css prototype</a></li>
 
 
     </ul>
