--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul>
         <li><a href="protoype/indel.html">prototype HTML assignment</a></li>
         <li><a href="css-demo/index.html">css prototype</a></li>
+        <li><a href="Web Form Submission/index.html">Bruce Forms</a></li>
 
 
     </ul>
