--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -17,8 +17,8 @@
   <main>
     <header role="banner" class="primary container">
       <div class="hgroup">
-        <h1><a href="index.html">Building the Modern Web</a></h1>
-        <h2>HTML5, CSS, JavaScript Fundamentals</h2>
+        <h1 class="primary"><a href="index.html">Building the Modern Web</a></h1>
+        <h2 class="primary">HTML5, CSS, JavaScript Fundamentals</h2>
       </div>
       <nav role="navigation">
         <ul>
