--- a/Web Form Submission/index.html
+++ b/Web Form Submission/index.html
@@ -12,15 +12,15 @@
     <form id="SubmitExampleForm" action="https://brucebauer.info/assets/ITEC3650/datadump.php">
         <div>
         <label for="FirstName" class="formlabel">First Name: </label>
-        <input type="text" id="FirstName" name="FirstName" size="30" maxlength="30" \>
+        <input type="text" id="FirstName" name="FirstName" size="30" maxlength="30" >
         </div>
         <div>
-        <label for="MiddleInitial"class="formlabel">Middle Initial: </label>
+        <label for="MiddleInitial" class="formlabel">Middle Initial: </label>
         <input type="text" id="MiddleInitial" name="MiddleInitial" size="1" maxlength="1">
     </div>
     <div>
        
-        <label for="LastName"class="formlabel">Last Name: </label>
+        <label for="LastName" class="formlabel">Last Name: </label>
         <input type="text" id="LastName" name="LastName" size="30" maxlength="30">
     </div>
     <div>
