--- a/Web Form Submission/index.html
+++ b/Web Form Submission/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="assets/css/style.css" rel="stylesheet" />
+    <script defer src="assets/js/scrips.js"></script>
 
    
 
