--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1>Your Name</h1>
+  <h1>Dustin</h1>
   <nav>
     <ul>
         <li><a href="protoype/indel.html">prototype HTML assignment</a></li>
