--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="protoype/indel.html">prototype HTML assignment</a></li>
         <li><a href="css-demo/index.html">css prototype</a></li>
         <li><a href="Web Form Submission/index.html">Bruce Forms</a></li>
+        <li><a href="cheatsheet/index.html">cheat sheet</a></li>
 
 
     </ul>
