--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <li><a href="css-demo/index.html">css prototype</a></li>
         <li><a href="Web Form Submission/index.html">Bruce Forms</a></li>
         <li><a href="cheatsheet/index.html">cheat sheet</a></li>
+        <li>Positioning lab
+          <ul>
+            <li><a href="positioning lab/float-1.html">float-1</a></li>
+            <li><a href="positioning lab/float-2.html">float-2</a></li>
+            <li><a href="positioning lab/absolute-1.html">absolute-1</a></li>
+            <li><a href="positioning lab/absolute-2.html">absolute-1</a></li>
+
+
+          </ul>
 
 
     </ul>
