--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
         <li><a href="cheatsheet/index.html">cheat sheet</a></li>
         <li>Positioning lab
           <ul>
-            <li><a href="positioning lab/float-1.html">float-1</a></li>
-            <li><a href="positioning lab/float-2.html">float-2</a></li>
             <li><a href="positioning lab/absolute-1.html">absolute-1</a></li>
             <li><a href="positioning lab/absolute-2.html">absolute-1</a></li>
 
+            <li><a href="positioning lab/ex1-flex.html">ex1-flex</a></li>
+            <li><a href="positioning lab/ex2-flex.html">ex2-flex</a></li>
+            
+            <li><a href="positioning lab/float-1.html">float-1</a></li>
+            <li><a href="positioning lab/float-2.html">float-2</a></li>
+            
 
           </ul>
+          <li><a href="circle /index.html">circle</a></li>
+          <
 
 
     </ul>
