--- a/circle /index.html
+++ b/circle /index.html
@@ -8,21 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
 
+    <link href="assets/style/style.css" rel="stylesheet" />
+   
 <!-- The following should be a file in the "style" folder -->
-    <style>
-    .formlabel {
-        display: inline-block;
-        width: 200px;
-        text-align: right;
-        padding: 5px;
-        font-weight: bold;
-    }
-
-    .error {
-        color: red;
-        padding-left: 5px;
-    }
-    </style>
+    
 </head>
 
 <body>
@@ -40,13 +29,12 @@
         <label class="formlabel">Circumference:</label><span id="circumference"></span><br>
         <label class="formlabel">Area:</label><span id="area"></span><br>
         <br><br>
-        <input type="submit" value="Calculate" id="btnSubmitCalculate">
+        <input type="submit" value="Calculate" id="btnSubmitCalculate" onclick="CircleCalculations()">
         <input type="submit" value="Clear" id="btnSubmitClear">
     </form>
-<script>
-$( "#CircleForm" ).validate({
 
-});
-</script>
+
+
+    <script src="assets/scrypts/scrypt.js"></script>  
 </body>
 </html>
