--- a/circle /index.html
+++ b/circle /index.html
@@ -30,7 +30,7 @@
         <label class="formlabel">Area:</label><span id="area"></span><br>
         <br><br>
         <input type="submit" value="Calculate" id="btnSubmitCalculate" onclick="CircleCalculations()">
-        <input type="submit" value="Clear" id="btnSubmitClear">
+        <input type="submit" value="Clear" id="btnSubmitClear" onclick="clearForm()" >
     </form>
 
 
