--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
             <li><a href="positioning lab/ex1-flex.html">ex1-flex</a></li>
             <li><a href="positioning lab/ex2-flex.html">ex2-flex</a></li>
+
+            <li><a href="positioning lab/ex1-grid.html">grid-1</a></li>
             
             <li><a href="positioning lab/float-1.html">float-1</a></li>
             <li><a href="positioning lab/float-2.html">float-2</a></li>
