--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
           </ul>
           <li><a href="circle /index.html">circle</a></li>
+          <li><a href="maxminave/index.html">Calc</a></li>
           
 
 
