--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           </ul>
           <li><a href="circle /index.html">circle</a></li>
           <li><a href="maxminave/index.html">Calc</a></li>
+
+          <li><a href="assets/img/squid-logo.png">squid-logo</a></li>
+          <p>this is a logo for a fake company that creates moistureiser for squid skin. <br>
+            It was made for graphic design class but forked from the main assignment because I wanted to use this for Ikaris
+
+          </p>
+
+         
           
 
 
