--- a/state-park/index.html
+++ b/state-park/index.html
@@ -26,6 +26,8 @@
     
 <h1>Daisy State Park</h1>
 </div>
+
+<div id="banner"></div>
 <nav>
     <ul>
     <li><a href="https://ualr.edu/">about</a></li>
