--- a/state-park/contact.html
+++ b/state-park/contact.html
@@ -40,7 +40,7 @@
     <main>
 <section class="content" id="gridM">
     <div id="ATP">
-    <h2>About the Park</h2>
+    <h2>Contact</h2>
     </div>
     <div class="container">
     <p id="mainpara1"> Located in a scenic setting in the beautiful Ouachita Mountains, Lake Greeson and the Little Missouri River create a destination for outdoor recreation. Situated on Lake Greeson, Daisy State Park is a popular place for fishing and kayaking with rentals available. Lake tours offer views of magnificent rock formations that you may not otherwise see. 
