--- a/state-park/contact.html
+++ b/state-park/contact.html
@@ -9,6 +9,10 @@
     <title>Daisy State Park</title>
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <meta name='robots' content='noindex'> 
+    <meta name="keywords" content="Daisy State Park, Hiking trails, River">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans&family=Pixelify+Sans&family=Poppins:wght@200&display=swap" rel="stylesheet">
@@ -21,7 +25,7 @@
 <div class="container">
     <div id="header1">
         <a href="index.html" id="logo" title="Home">
-        <img src="assets/img/ARpark-logo.png" alt="Placeholder">
+        <img src="assets/img/ARpark-logo.png" alt="Park_logo" >
         </a>
     
 <h1>Daisy State Park</h1>
@@ -30,7 +34,7 @@
 <div id="banner"></div>
 <nav>
     <ul>
-        <li><a href="index.html">about</a></li>
+        <li><a href="index.html" >about</a></li>
         <li><a href="lodge.html">Lodgeing</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -64,8 +68,10 @@
     </main>
 
     <Footer class="primary">
-        &copy; 2022 Thomas Wallace
-        <li><a href="#top">Anchor Links  reloads</a></li>
+        &copy; Dustin Gann  2025
+
+        <a href="mailto:email@address.com">Email Link</a>
+        
         </Footer>
 </body>
 </html>
