--- a/state-park/contact.html
+++ b/state-park/contact.html
@@ -63,6 +63,9 @@
 
 
 </div>
+
+
+
 </section>
 
     </main>
@@ -73,5 +76,10 @@
         <a href="mailto:email@address.com">Email Link</a>
         
         </Footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
