--- a/state-park/lodge.html
+++ b/state-park/lodge.html
@@ -90,7 +90,7 @@
 
 <form id="myform" onsubmit="return false">
     <label for="Placel" class="formlabel">Location: </label>
-    <input type="text" id="Placel" name="Placel" size="30" maxlength="30" data-rule-required="true" data-msg-required="Placel  is Required" aria-invalid="true">
+    <input type="text" id="Placel" name="Placel" size="30" maxlength="30"  value="Daisy State Park" data-rule-required="true" data-msg-required="Placel  is Required" aria-invalid="true">
     <label for="FirstName" class="error"></label><br>
         <input type="submit" value="Displaytemp" id="Displaytemp" name="Displaytemp" onclick="GetTemp();">
         <input type="submit" formnovalidate value="Clear" id="Clear" name="Clear" onclick="ClearForm();">
