--- a/currency_value_history/indel.html
+++ b/currency_value_history/indel.html
@@ -13,7 +13,7 @@
 <body>
     <form id="myform" onsubmit="return false">
         <div class="formcontainer">
-            <h2>Stock Ticker Details</h2>
+            <h2>Currency Details</h2>
 
 
             <label for="baseCurrency">Base Currency: </label>
