--- a/state-park/contact.html
+++ b/state-park/contact.html
@@ -44,26 +44,10 @@
     <main>
 <section class="content" id="gridM">
     <div id="ATP">
-    <h2>Contact</h2>
+    <h2></h2>
     </div>
-    <div class="container">
-    <p id="mainpara1"> Located in a scenic setting in the beautiful Ouachita Mountains, Lake Greeson and the Little Missouri River create a destination for outdoor recreation. Situated on Lake Greeson, Daisy State Park is a popular place for fishing and kayaking with rentals available. Lake tours offer views of magnificent rock formations that you may not otherwise see. 
-        Seasonal Interpreter will provide special programs, walks, and workshops throughout the summer. Please request a weekly program schedule at the park Visitor Center.
-        
-        The Little Missouri River also offers impressive fishing for trout and excellent floating in the spring. Other activities include ATV riding on the Bear Cycle Trail. Daisy is near Crater of Diamonds State Park which makes a great day trip from your campsite. There are three YURTs, 100 campsites (26 Class A, 56 Class B, and 18 tent sites), picnic areas, a pavilion, launch ramps, and a playground.
-   </p>
-   <article id="article1">
-   <img src="assets/img/main-river.jpg" alt="River" id="mainimg1">
-   <p id="mainpara2">Beyond its waterways, Daisy State Park is also a fantastic spot for picnicking and relaxation. The park features spacious picnic areas equipped with tables and grills, ideal for family gatherings or a quiet lunch surrounded by nature. For those interested in history, the park is located near the historic town of Murfreesboro, home to the famous Crater of Diamonds State Park, where visitors can try their hand at diamond hunting. Daisy State Park’s peaceful atmosphere and diverse activities make it a must-visit destination for anyone exploring Arkansas.</p>
-   </article>
-
-<p id="mainpara3">
-    Daisy State Park in Arkansas is a paradise for hikers and nature lovers, offering a variety of scenic trails that cater to all skill levels. The park’s trails wind through lush forests, rocky outcrops, and along the edges of Lake Greeson, providing breathtaking views and opportunities to spot local wildlife. Whether you're looking for a leisurely stroll or a more challenging hike, the well-marked paths ensure a rewarding outdoor experience. The trails are especially popular in the fall when the foliage transforms into a vibrant display of autumn colors, making it a perfect destination for photographers and nature enthusiasts.
-</p>
-
-
-</div>
-
+    
+    <div id="wufoo-zh9f25z0u2z2fn"> Fill out my <a href="https://dustingann.wufoo.com/forms/zh9f25z0u2z2fn">online form</a>. </div> <script type="text/javascript"> var zh9f25z0u2z2fn; (function(d, t) { var s = d.createElement(t), options = { 'userName':'dustingann', 'formHash':'zh9f25z0u2z2fn', 'autoResize':true, 'height':'497', 'async':true, 'host':'wufoo.com', 'header':'show', 'ssl':true }; s.src = ('https:' == d.location.protocol ?'https://':'http://') + 'secure.wufoo.com/scripts/embed/form.js'; s.onload = s.onreadystatechange = function() { var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return; try { zh9f25z0u2z2fn = new WufooForm(); zh9f25z0u2z2fn.initialize(options); zh9f25z0u2z2fn.display(); } catch (e) { } }; var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr); })(document, 'script'); </script>
 
 
 </section>
