--- a/state-park/lodge.html
+++ b/state-park/lodge.html
@@ -96,7 +96,24 @@
         <input type="submit" formnovalidate value="Clear" id="Clear" name="Clear" onclick="ClearForm();">
 </form>
 
-<div id="ass"></div>
+
+<div class="clearfix">
+    <div class="img-container">
+        <canvas id="chartjs-1" width="700" height="400"></canvas>
+    </div>
+</div>
+
+
+
+
+
+<div class="clearfix">
+    <div class="img-container">
+        <span id="Heatvaluetable"></span>
+    </div>
+</div>
+
+
 
 </section>
     </main>
